@@ -3,8 +3,11 @@
  - Fixed
    - Database queries worked only if SQLite double-quoted string (DQS)
      feature (https://www.sqlite.org/quirks.html#dblquote) was enabled
+   - Disabling data resolutions in data retention configuration didn't result
+     in possibly existing database entries getting removed from the database
  - New
    - SQLite version is visible in --version outputs
+   - Database is vacuumed during daemon startup and reload
 
 
 2.10 / 22-Oct-2022
